Replaced project names and namespaces

--- a/BeefSpace.toml
+++ b/BeefSpace.toml
@@ -1,8 +1,2 @@
 FileVersion = 1
-Projects = {Engine = {Path = "Engine"}, Editor = {Path = "Editor"}, glfw-beef = {Path = "Libs/GLFW"}}
-
-[Configs.Test.Win32]
-ConfigSelections = {corlib = {Config = "Debug"}}
-
-[Configs.Test.Win64]
-ConfigSelections = {corlib = {Config = "Debug"}}
+Projects = {SteelEngine = {Path = "Engine"}, SteelEditor = {Path = "Editor"}, glfw-beef = {Path = "Libs/GLFW"}}
