--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "Libs\/GLFW"]
+[submodule "Libs/GLFW"]
 	path = Libs/GLFW
 	url = https://github.com/MineGame159/glfw-beef
-[submodule "Libs/ImGui"]
-	path = Libs/ImGui
-	url = https://github.com/Beef-Community-Project/imgui-beef
-	branch = docking
