ImGui should be working

--- a/BeefSpace.toml
+++ b/BeefSpace.toml
@@ -1,2 +1,5 @@
 FileVersion = 1
-Projects = {SteelEngine = {Path = "Engine"}, SteelEditor = {Path = "Editor"}, glfw-beef = {Path = "Libs/GLFW"}}
+Projects = {SteelEngine = {Path = "Engine"}, SteelEditor = {Path = "Editor"}, glfw-beef = {Path = "Libs/GLFW"}, imgui-beef = {Path = "Libs/ImGui/imgui-beef"}, imgui-impl-glfw = {Path = "Libs/ImGui/imgui-impl-glfw"}, imgui-impl-opengl3 = {Path = "Libs/ImGui/imgui-impl-opengl3"}}
+
+[Workspace]
+StartupProject = "SteelEditor"
