--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
-[submodule "Libs/GLFW"]
+[submodule "GLFW"]
 	path = Libs/GLFW
 	url = https://github.com/MineGame159/glfw-beef
+[submodule "ImGui"]
+	path = Libs/ImGui
+	url = https://github.com/Beef-Community-Project/imgui-beef
+	branch = docking
