--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "GLFW"]
 	path = Libs/GLFW
 	url = https://github.com/MineGame159/glfw-beef
+[submodule "Libs/ImGui"]
+	path = Libs/ImGui
+	url = https://github.com/qzole/imgui-beef
