Added BGFX as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Libs/GLFW"]
 	path = Libs/GLFW
 	url = https://github.com/MineGame159/glfw-beef.git
+[submodule "BGFX"]
+	path = Libs/BGFX
+	url = https://github.com/ExoKomodo/Bgfx-bf
