Basic GUI and ConsoleWindow

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "ImGui"]
 	path = Libs/ImGui
 	url = https://github.com/qzole/imgui-beef
+[submodule "BGFX"]
+	path = Libs/BGFX
+	url = https://github.com/ExoKomodo/Bgfx-bf
+[submodule "BeefToml"]
+	path = Libs/BeefToml
+	url = https://github.com/killamaaki/Beef-Toml
