--- a/Editor/BeefProj.toml
+++ b/Editor/BeefProj.toml
@@ -1,5 +1,5 @@
 FileVersion = 1
-Dependencies = {corlib = "*", SteelEngine = "*", imgui-impl-opengl3 = "*", imgui-impl-glfw = "*", imgui-beef = "*"}
+Dependencies = {corlib = "*", SteelEngine = "*", imgui-impl-opengl3 = "*", imgui-impl-glfw = "*", imgui-beef = "*", BeefToml = "*"}
 
 [Project]
 Name = "SteelEditor"
