Added New Project functionality

--- a/Editor/BeefProj.toml
+++ b/Editor/BeefProj.toml
@@ -7,3 +7,4 @@ StartupObject = "SteelEditor.Program"
 
 [Configs.Debug.Win64]
 BeefLibType = "DynamicDebug"
+DebugWorkingDirectory = "$(WorkspaceDir)"
